--- a/WorldClock/app/src/main/res/layout/boxlayout.xml
+++ b/WorldClock/app/src/main/res/layout/boxlayout.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:showIn="@layout/activity_main" >
-
-    //resolve error
-    //https://stackoverflow.com/questions/28353835/namespace-app-not-bound-in-android-studio-with-external-lib-from-maven
-
-    //images from: https://www.flaticon.com/
-
-    android:layout_width="match_parent"
-    android:layout_height="175dp">
+    tools:showIn="@layout/activity_main">
 
     <TextView
         android:id="@+id/city"
@@ -21,14 +13,13 @@
         android:layout_marginStart="42dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="345dp"
-        android:text="City"
+        android:text="@string/city"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/clock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/clock"
@@ -38,15 +29,14 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="334dp"
         android:layout_marginBottom="27dp"
-        android:text="00:00"
+        android:text="@string/default_time"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city"
-        app:layout_constraintVertical_bias="0.483"
-/>
+        app:layout_constraintVertical_bias="0.483" />
 
     <ImageView
         android:id="@+id/image"
@@ -55,6 +45,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="11dp"
+        android:contentDescription="@string/placeholder_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
