--- a/WorldClock/app/src/main/res/layout/activity_main.xml
+++ b/WorldClock/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,20 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/titleView" />
 
+                <ImageButton
+                    android:id="@+id/nightButton"
+                    android:layout_width="62dp"
+                    android:layout_height="49dp"
+                    android:layout_marginStart="87dp"
+                    android:layout_marginTop="103dp"
+                    android:layout_marginEnd="23dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/switch2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <include
