--- a/WorldClock/app/src/main/res/layout/activity_main.xml
+++ b/WorldClock/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainBackGround"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EBFF9D0E"
@@ -58,8 +59,9 @@
 
                 <ImageButton
                     android:id="@+id/nightButton"
-                    android:layout_width="62dp"
-                    android:layout_height="49dp"
+                    android:background="@drawable/diffmoon"
+                    android:layout_width="50dip"
+                    android:layout_height="50dip"
                     android:layout_marginStart="87dp"
                     android:layout_marginTop="103dp"
                     android:layout_marginEnd="23dp"
